--- a/EmpInfo/Views/Apply/BeginApplySP.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplySP.cshtml
@@ -768,7 +768,7 @@
         <h4 class="text-danger"><i class="fa fa-info-circle"></i> 操作说明 </h4>
         <div style="margin-left:18px;padding-top:6px;" class="text-danger">
             <p>
-                1. 流程步骤：流程开始--->员工提交申请--->部门负责人审批--->行政部审批（如不是寄产品，则跳过此步骤）--->物流部审批（如总毛重小于10KG，则跳过此步骤）--->流程结束。
+                1. 流程步骤：流程开始--->员工提交申请--->部门负责人审批--->QA审批（如果不是退补货，则跳过此步骤）---> 行政部审批（如不是寄产品，则跳过此步骤）--->物流部审批（如总毛重小于10KG，则跳过此步骤）--->流程结束。
             </p>
             <p>
                 2. 10KG以内的省内件，默认使用顺丰标快；10KG以内的省外件或港澳台件，时效是次日达的，默认使用顺丰标快；
