--- a/EmpInfo/Views/Apply/BeginAuditJQApply.cshtml
+++ b/EmpInfo/Views/Apply/BeginAuditJQApply.cshtml
@@ -221,6 +221,14 @@
                     </span>
                 </div>
                 }
+                <div class="b-div">
+                    <span class="b-label" style="vertical-align:top;">
+                        审核意见:
+                    </span>
+                    <span style="display:inline-block;width:70%">
+                        <textarea class="form-control" rows="2" id="opinion" name="opinion"></textarea>
+                    </span>
+                </div>                
             </form>
             }
             <div style="margin-top:12px;"></div>
