--- a/EmpInfo/Views/Shared/_SelectDep.cshtml
+++ b/EmpInfo/Views/Shared/_SelectDep.cshtml
@@ -63,7 +63,7 @@
     });
 
 </script>
-<div class="modal fade" id="depSelModal" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="depSelLabel" aria-hidden="true">
+<div class="modal fade" id="depSelModal" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="depSelLabel" aria-hidden="true" style="z-index:2000;">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
