--- a/EmpInfo/Views/Report/JQReport.cshtml
+++ b/EmpInfo/Views/Report/JQReport.cshtml
@@ -228,7 +228,7 @@
                 <input type="text" class="form-control" name="sysNum" id="sysNum" style="margin:6px 0;" value="@sm.sysNum" />                
             </div>
         </div>
-        <div class="small text-danger"><i class="fa fa-info-circle"></i> 可查询到人事部门名称包含以下关键字的离职申请：@ViewData["canCheckDep"] </div>
+        <div class="small text-danger"><i class="fa fa-info-circle"></i> 可查询到人事部门名称包含这些关键字的离职申请：@ViewData["canCheckDep"] </div>
         <div class="btn-group btn-group-justified" role="group" style="margin-bottom:20px;margin-top:4px;">
             <div class="btn-group" role="group">
                 <button class="btn btn-primary" id="checkBt" data-loading-text="搜索中..."><i class="fa fa-search"></i> 搜索</button>
