--- a/EmpInfo/Views/Apply/BeginApplyJQ.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyJQ.cshtml
@@ -82,6 +82,15 @@
                 });
             });
 
+            $("input[name='real_dep']").iCheck({
+                radioClass: 'iradio_square-red'
+            });
+
+            $("#dep1_text,#dep2_text").click(function () {
+                var ck = $(this).parent().find("input")[0];
+                $(ck).iCheck("check");
+            });
+
             $("#apply_bt").on("click", function () {
                 var obj = utils.getFormObj($("#fm"));
                 
@@ -104,15 +113,15 @@
                         return;
                     }                    
                 } else {
-                    if (obj.absent_from == "") {
+                    if (!obj.absent_from || obj.absent_from == "") {
                         toastr.error("旷工开始日期必须填写");
                         return;
                     }
-                    if (obj.absent_to == "") {
+                    if (!obj.absent_to || obj.absent_to == "") {
                         toastr.error("旷工结束日期必须填写");
                         return;
                     }
-                    if (obj.absent_days == "") {
+                    if (!obj.absent_days || obj.absent_days == "") {
                         toastr.error("旷工天数必须填写");
                         return;
                     }
@@ -138,52 +147,72 @@
                         toastr.error("必须选择部门负责人");
                         return;
                     }
-                    //if (obj.highest_charger_name == "") {
-                    //    toastr.error("必须选择最高负责人");
-                    //    return;
-                    //}
                 } else if (obj.salary_type == "计件") {
                     if (obj.group_leader_name == "") {
                         toastr.error("必须选择组长");
                         return;
                     }
-                    //if (obj.charger_name == "") {
-                    //    toastr.error("必须选择主管");
-                    //    return;
-                    //}
-                    //if (obj.produce_minister_name == "") {
-                    //    toastr.error("必须选择生产部长");
-                    //    return;
-                    //}
                 } else {
                     toastr.error("只有月薪或计件的员工才能申请此流程");
                     return;
                 }
-                
-                openConfirmDialog("确定要提交申请吗？", function () {
-                    $("#apply_bt").button("loading");
-                    $.ajax({
-                        type: 'post',
-                        url: 'SaveApply',
-                        data: $("#fm").serialize(),
-                        cache: false,
-                        dataType: 'json',
-                        success: function (data) {
-                            $("#apply_bt").button("reset");
-                            if (data.suc) {
-                                toastr.success("提交成功:" + data.msg);
-                                setTimeout(function () { window.location.href = "CheckApply?sysNo=" + obj.sys_no; }, 2000);
-                            } else {
-                                toastr.error("提交失败：" + data.msg);
-                                $("#apply_bt").button("reset");
-                            }
 
+                // 计件员工离职，如果离职人和组长的人事部门不一致，则弹出选框给申请人选择哪个部门 2019-12-17
+                if (obj.salary_type == "计件") {
+                    var group_leader_num = obj.group_leader_name.split("(")[1].split(")")[0];
+                    $.post("@Url.Content("~/Item/GetHREmpInfoDetail")", { cardNumber: group_leader_num }, function (data) {
+                        if (data.suc) {
+                            var group_leader = JSON.parse(data.extra);
+                            if (obj.dep_name != group_leader.dep_name) {
+                                $("#depModal").modal("show");
+                                $("#dep1").val(obj.dep_name);
+                                $("#dep2").val(group_leader.dep_name);
+                                $("#dep1_text").html(obj.dep_name);
+                                $("#dep2_text").html(group_leader.dep_name);
+                            } else {
+                                beginApply();
+                            }
+                        } else {
+                            toastr.error("组长："+data.msg);
                         }
                     });
-                });
+                } else {
+                    beginApply();
+                }
+            });
+
+            $("#selectDepBt").on("click", function () {
+                var realDep = $("input[name='real_dep']:checked").val();
+                $("#dep_name").val(realDep);
+                $("#depModal").modal("hide");
+                beginApply();
             });
 
         });
+
+        function beginApply() {
+            openConfirmDialog("确定要提交申请吗？", function () {
+                $("#apply_bt").button("loading");
+                $.ajax({
+                    type: 'post',
+                    url: 'SaveApply',
+                    data: $("#fm").serialize(),
+                    cache: false,
+                    dataType: 'json',
+                    success: function (data) {
+                        $("#apply_bt").button("reset");
+                        if (data.suc) {
+                            toastr.success("提交成功:" + data.msg);
+                            setTimeout(function () { window.location.href = "CheckApply?sysNo=" + obj.sys_no; }, 2000);
+                        } else {
+                            toastr.error("提交失败：" + data.msg);
+                            $("#apply_bt").button("reset");
+                        }
+
+                    }
+                });
+            });
+        }
 
         function getHREmpDetail() {
             var num = $("#card_number").val();
@@ -204,6 +233,8 @@
                 }
             });
         }
+
+        
 
     </script>
 }
@@ -283,7 +314,7 @@
                             人事部门:
                         </span>
                         <span class="b-input">
-                            <input type="text" class="form-control" name="dep_name" placeholder="填入厂牌编码后带出" readonly />
+                            <input type="text" class="form-control" name="dep_name" id="dep_name" placeholder="填入厂牌编码后带出" readonly />
                         </span>
                     </div>
                 </div>
@@ -581,4 +612,24 @@
 @section Modal {
     @Html.Partial("_ConfirmDialog")
     @Html.Partial("_SelectUsers")
+
+    <div class="modal fade" id="depModal" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="groupLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">选择人事部门</h4>
+                </div>
+                <div class="modal-body">
+                    <p class="text-danger"><i class="fa fa-question-circle"></i> 系统检测到离职人员的人事部门与所选组长的人事部门不一致，请在以下选择正确的离职人员部门：</p>
+                    <p><input type="radio" name="real_dep" id="dep1" /> <span id="dep1_text"></span></p>
+                    <p><input type="radio" name="real_dep" id="dep2" /> <span id="dep2_text"></span></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" id="selectDepBt"><span class="fa fa-check-circle"></span> 确认选择</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 }
